Return all group members for get2-node

--- a/77-openhab2.html
+++ b/77-openhab2.html
@@ -357,6 +357,8 @@
             <li><code>msg.event</code> : "ActualState"</li>
             <li><code>msg.payload</code> : the current state of the selected item</li>
             <li><code>msg.payload_in</code> : copy of incoming message payload</li>
+            <li><code>msg.type</code> : returns the type of the item (like <code>String</code> or <code>Group</code>)</li>
+            <li><code>msg.groups</code> : contains the list of group(s) the item belongs to. If the item does not belong to any group, the list will be empty.</li>
         </ul>
     </ul>
 </script>
