--- a/77-openhab2.html
+++ b/77-openhab2.html
@@ -354,11 +354,12 @@
         <ul>
             <li><code>msg.item</code> : the item's itemname (not the label)</li>
             <li><code>msg.topic</code> : the item's topic as specified</li>
-            <li><code>msg.event</code> : "ActualState"</li>
+            <li><code>msg.event</code> : will be set to "ActualState"</li>
             <li><code>msg.payload</code> : the current state of the selected item</li>
             <li><code>msg.payload_in</code> : copy of incoming message payload</li>
             <li><code>msg.type</code> : returns the type of the item (like <code>String</code> or <code>Group</code>)</li>
             <li><code>msg.groups</code> : contains the list of group(s) the item belongs to. If the item does not belong to any group, the list will be empty.</li>
+            <li><code>msg.members</code> : when msg.type is <code>Group</code>, this will contain a list of all members that are part of this group</li>
         </ul>
     </ul>
 </script>
