--- a/77-openhab2.html
+++ b/77-openhab2.html
@@ -193,6 +193,11 @@
         <label for="node-input-topic"><i class="fa fa-tasks"></i> Topic</label>
         <input type="text" id="node-input-topic" name="node-input-topic" style="width: 250px;">
     </div>
+    <div class="form-row">
+        <label for="node-input-sendnull"><i class="fa fa-crosshairs"></i> Send NULL-values</label>
+        <input type="checkbox" id="node-input-sendnull" style="display: inline-block; width: auto; vertical-align: top;">
+        </input>
+    </div>
 </script>
 
 <script type="text/x-red" data-template-name="openhab2-monitor2">
@@ -447,22 +452,50 @@
     RED.nodes.registerType('openhab2-controller2', {
         category: 'config',
         defaults: {
-            name: {value:"",required:true},
-            protocol: {value:"http",required:true},
-            host: {value:"localhost",required:true},
-            port: {value:8080,required:false, validate:RED.validators.number() },
-            path: {value:"",required:false},
-            username: {value:"", required:false},
-            password: {value:"", required:false},
-            ohversion: {value:"v2",required:true},
-            token: {value:"", required:false}
+            name: {
+                value: "",
+                required: true
+            },
+            protocol: {
+                value: "http",
+                required: true
+            },
+            host: {
+                value: "localhost",
+                required: true
+            },
+            port: {
+                value: 8080,
+                required: false,
+                validate: RED.validators.number()
+            },
+            path: {
+                value: "",
+                required: false
+            },
+            username: {
+                value: "",
+                required: false
+            },
+            password: {
+                value: "",
+                required: false
+            },
+            ohversion: {
+                value: "v2",
+                required: true
+            },
+            token: {
+                value: "",
+                required: false
+            }
         },
         paletteLabel: "openhab2-controller2",
-        label: function() {
+        label: function () {
             return this.name;
         },
-        oneditprepare: function() {
-            $("#node-config-input-ohversion").change(function() {
+        oneditprepare: function () {
+            $("#node-config-input-ohversion").change(function () {
                 if ($("#node-config-input-ohversion").val() == "v3") {
                     $(".node-token").show();
                 } else {
@@ -476,7 +509,7 @@
 
 <script type="text/javascript">
     // some code shared by openhab2-in2 and openhab2-out2
-    
+
     function openhabEditPrepare(node, allowEmpty) {
 
         function updateOpenhabItemSelection(cntrlConfig, itemName) {
@@ -493,84 +526,111 @@
                 disabledText: 'No items found...'
             });
 
-            if ( cntrlConfig ) {
+            if (cntrlConfig) {
                 var config = {
-                       name: cntrlConfig.name,
-                       protocol: cntrlConfig.protocol,
-                       host: cntrlConfig.host,
-                       port: cntrlConfig.port,
-                       path: cntrlConfig.path,
-                       username: cntrlConfig.username,
-                       password: cntrlConfig.password,
-                       ohversion: cntrlConfig.ohversion,
-                       token: cntrlConfig.token,
+                    name: cntrlConfig.name,
+                    protocol: cntrlConfig.protocol,
+                    host: cntrlConfig.host,
+                    port: cntrlConfig.port,
+                    path: cntrlConfig.path,
+                    username: cntrlConfig.username,
+                    password: cntrlConfig.password,
+                    ohversion: cntrlConfig.ohversion,
+                    token: cntrlConfig.token,
                 }
                 //console.log("config = " + JSON.stringify(config));
                 $.getJSON("/openhab2/items", config)
-                  .done( function(data) {
+                    .done(function (data) {
 
-                     itemSelectionEl.children().remove();
-                     var items = data;
+                        itemSelectionEl.children().remove();
+                        var items = data;
 
-                     items.sort(function(a,b) {
-                         if ( a.name < b.name )
-                             return -1;
-                         else if ( a.name > b.name )
-                             return 1;
-                         else
-                             return 0;
-                     });
-                     if (allowEmpty)
-                        itemSelectionEl.append('<option value=""></option>');
-                    items.forEach(function(item) {
-                        itemSelectionEl.append('<option>' + item.name + '</option>');
-                        var it = itemSelectionEl.find('option').last();
-                        it.attr('value', item.name);
+                        items.sort(function (a, b) {
+                            if (a.name < b.name)
+                                return -1;
+                            else if (a.name > b.name)
+                                return 1;
+                            else
+                                return 0;
                         });
-                     itemSelectionEl.val(itemName);
-                     itemSelectionEl.multiselect('rebuild');
-                  })
-                  .fail(function(e1, e2, e3) {
-                    console.log("error : " + JSON.stringify(e1));
-                  });
+                        if (allowEmpty)
+                            itemSelectionEl.append('<option value=""></option>');
+                        items.forEach(function (item) {
+                            itemSelectionEl.append('<option>' + item.name + '</option>');
+                            var it = itemSelectionEl.find('option').last();
+                            it.attr('value', item.name);
+                        });
+                        itemSelectionEl.val(itemName);
+                        itemSelectionEl.multiselect('rebuild');
+                    })
+                    .fail(function (e1, e2, e3) {
+                        console.log("error : " + JSON.stringify(e1));
+                    });
             }
         }
 
         updateOpenhabItemSelection(RED.nodes.node(node.controller), node.itemname);
 
-        $('#node-input-controller').change(function(ev) {
-            updateOpenhabItemSelection(RED.nodes.node($('#node-input-controller').val()), $('#node-input-').val() || node.itemname);
+        $('#node-input-controller').change(function (ev) {
+            updateOpenhabItemSelection(RED.nodes.node($('#node-input-controller').val()), $('#node-input-')
+            .val() || node.itemname);
         });
     }
 </script>
 
 <script type="text/javascript">
     $.getScript('static/js/bootstrap-multiselect.js');
-    RED.nodes.registerType('openhab2-in2',{
+    RED.nodes.registerType('openhab2-in2', {
         category: 'home automation',
         color: '#00cc00',
         defaults: {
-            name:      {value:""},
-            controller:  {value:"", type:"openhab2-controller2", required: true},
-            itemname:  {value:"", required: true},
-            topic:     {value:"", required: false},
-            initialstate: {value: false},
-            whenupdated: {value: true},
-            whencommand: {value: true},
-            whenchanged: {value: false},
-            changedfrom: {value:"", required: false},
-            changedto: {value:"", required: false}
+            name: {
+                value: ""
+            },
+            controller: {
+                value: "",
+                type: "openhab2-controller2",
+                required: true
+            },
+            itemname: {
+                value: "",
+                required: true
+            },
+            topic: {
+                value: "",
+                required: false
+            },
+            initialstate: {
+                value: false
+            },
+            whenupdated: {
+                value: true
+            },
+            whencommand: {
+                value: true
+            },
+            whenchanged: {
+                value: false
+            },
+            changedfrom: {
+                value: "",
+                required: false
+            },
+            changedto: {
+                value: "",
+                required: false
+            }
         },
         inputs: 0,
         outputs: 1,
         icon: "node-red-contrib-openhab2.png",
         paletteLabel: "openhab2-in2",
-        label: function() {
-            return(this.name||this.itemname||"openhab2 in2");
+        label: function () {
+            return (this.name || this.itemname || "openhab2 in2");
         },
-        oneditprepare: function() {
+        oneditprepare: function () {
             openhabEditPrepare(this, false);
-            $("#node-input-whenchanged").change(function() {
+            $("#node-input-whenchanged").change(function () {
                 if ($(this).is(":checked")) {
                     $(".node-whenchanged").show();
                 } else {
@@ -580,101 +640,147 @@
                 }
             });
             if (this.whenchanged === "true" || this.whenchanged === true) {
-                $("#node-input-whenchanged").prop("checked",true);
+                $("#node-input-whenchanged").prop("checked", true);
             } else {
-                $("#node-input-whenchanged").prop("checked",false);
+                $("#node-input-whenchanged").prop("checked", false);
             }
         }
     });
 </script>
 
 <script type="text/javascript">
-    RED.nodes.registerType('openhab2-get2',{
+    RED.nodes.registerType('openhab2-get2', {
         category: 'home automation',
         color: '#00cc00',
         defaults: {
-            name:      {value:""},
-            controller:  {value:"", type:"openhab2-controller2", required:true},
-            itemname:  {value:"", required:false},
-            topic:     {value:"", required: false},
+            name: {
+                value: ""
+            },
+            controller: {
+                value: "",
+                type: "openhab2-controller2",
+                required: true
+            },
+            itemname: {
+                value: "",
+                required: false
+            },
+            topic: {
+                value: "",
+                required: false
+            },
+            sendnull: {
+                value: false
+            }
         },
         inputs: 1,
         outputs: 1,
         icon: "node-red-contrib-openhab2.png",
         paletteLabel: "openhab2-get2",
-        label: function() {
+        label: function () {
 
-            return(this.name||this.itemname||"openhab2 get2");
+            return (this.name || this.itemname || "openhab2 get2");
         },
-        oneditprepare: function() {
+        oneditprepare: function () {
             openhabEditPrepare(this, true);
         }
     });
 </script>
 
 <script type="text/javascript">
-    RED.nodes.registerType('openhab2-monitor2',{
+    RED.nodes.registerType('openhab2-monitor2', {
         category: 'home automation',
         color: '#00cc00',
         defaults: {
-            name:      {value:""},
-            controller:  {value:"", type:"openhab2-controller2", required:true}
+            name: {
+                value: ""
+            },
+            controller: {
+                value: "",
+                type: "openhab2-controller2",
+                required: true
+            }
         },
         inputs: 0,
         outputs: 3,
         icon: "node-red-contrib-openhab2.png",
         paletteLabel: "openhab2-monitor",
-        label: function() {
+        label: function () {
 
-            return(this.name||"openhab2 monitor");
+            return (this.name || "openhab2 monitor");
         },
-        oneditprepare: function() {
-        }
+        oneditprepare: function () {}
     });
 </script>
 
 <script type="text/javascript">
-    RED.nodes.registerType('openhab2-out2',{
+    RED.nodes.registerType('openhab2-out2', {
         category: 'home automation',
         color: '#00cc00',
         defaults: {
-            name:      {value:""},
-            controller:  {value:"", type:"openhab2-controller2", required:true},
-            itemname:  {value:"", required:false},
-            topic: {value:"", required:false},
-            payload:  {value:"", required:false},
-            onlywhenchanged: {value: false},
+            name: {
+                value: ""
+            },
+            controller: {
+                value: "",
+                type: "openhab2-controller2",
+                required: true
+            },
+            itemname: {
+                value: "",
+                required: false
+            },
+            topic: {
+                value: "",
+                required: false
+            },
+            payload: {
+                value: "",
+                required: false
+            },
+            onlywhenchanged: {
+                value: false
+            },
         },
         inputs: 1,
         outputs: 0,
         icon: "node-red-contrib-openhab2.png",
         paletteLabel: "openhab2-out2",
-        label: function() {
-            return(this.name||this.itemname||"openhab2 out2");
+        label: function () {
+            return (this.name || this.itemname || "openhab2 out2");
         },
-        oneditprepare: function() {
+        oneditprepare: function () {
             openhabEditPrepare(this, true);
         }
     });
 </script>
 
 <script type="text/javascript">
-    RED.nodes.registerType('openhab2-events2',{
+    RED.nodes.registerType('openhab2-events2', {
         category: 'home automation',
         color: '#0fdd0f',
         defaults: {
-            name:      {value:""},
-            controller:  {value:"", type:"openhab2-controller2", required:true},
-            itemname:  {value:"", required:false},
+            name: {
+                value: ""
+            },
+            controller: {
+                value: "",
+                type: "openhab2-controller2",
+                required: true
+            },
+            itemname: {
+                value: "",
+                required: false
+            },
         },
         inputs: 0,
         outputs: 1,
         icon: "node-red-contrib-openhab2.png",
         paletteLabel: "openhab2-events2",
-        label: function() {
-            return(this.name||this.itemname||"openhab2 events2");
+        label: function () {
+            return (this.name || this.itemname || "openhab2 events2");
         },
-        oneditprepare: function() {
+        oneditprepare: function () {
             openhabEditPrepare(this, true);
         }
     });
