Add extra info on InitialStateEvent

--- a/77-openhab2.html
+++ b/77-openhab2.html
@@ -113,6 +113,9 @@
         <label for="node-input-topic"><i class="fa fa-tasks"></i> Topic</label>
         <input type="text" id="node-input-topic" name="node-input-topic" style="width: 250px;">
     </div>
+    <div class="form-tips">
+        The InitialStateEvent will be send whenever this node is (re-)initialized, but also whenever the controller reconnects to the OpenHAB server.
+    </div>
     <div class="form-row">
         <label for="node-input-initialstate"><i class="fa fa-crosshairs"></i> Send initial<br/>(<code>InitialStateEvent</code>)</label>
         <input type="checkbox" id="node-input-initialstate" style="display: inline-block; width: auto; vertical-align: top;">
