--- a/77-openhab2.html
+++ b/77-openhab2.html
@@ -113,6 +113,9 @@
         <label for="node-input-topic"><i class="fa fa-tasks"></i> Topic</label>
         <input type="text" id="node-input-topic" name="node-input-topic" style="width: 250px;">
     </div>
+    <div class="form-tips">
+        The InitialStateEvent will be send whenever this node is (re-)initialised, but also whenever the controller reconnects to the OpenHAB server.
+    </div>
     <div class="form-row">
         <label for="node-input-initialstate"><i class="fa fa-crosshairs"></i> Send initial<br/>(<code>InitialStateEvent</code>)</label>
         <input type="checkbox" id="node-input-initialstate" style="display: inline-block; width: auto; vertical-align: top;">
@@ -313,7 +316,7 @@
         <li><b>Controller :</b> Select the openHAB controller</li>
         <li><b>Item :</b>Select the Item to monitor</li>
         <li><b>Topic :</b> Set .topic for the outgoing message</li>
-        <li><b>Send initial :</b>Send message at node startup (type 'InitialStateEvent')</li>
+        <li><b>Send initial :</b>Send message at node and/or the connected controller (openhab2-controller2) startup (type 'InitialStateEvent')</li>
         <li><b>When updated :</b>Send message when node state updates (type 'ItemStateEvent')</li>
         <li><b>When command :</b>Send message when node state receives a command (type 'ItemCommandEvent')</li>
         <li><b>When changed :</b>Send message when node state changes (type 'ItemStateChangedEvent' or 'GroupItemStateChangedEvent')</li>
@@ -390,7 +393,7 @@
         <li>Channel 2:
             <ul>
                 <li><code>msg.topic</code> : "ConnectionError"</li>
-                <li><code>msg.payload</code> : error message</li>
+                <li><code>msg.payload</code> : error message(s)</li>
                </ul>
         </li>
         <li>Channel 3:
