--- a/77-openhab2.html
+++ b/77-openhab2.html
@@ -114,7 +114,7 @@
         <input type="text" id="node-input-topic" name="node-input-topic" style="width: 250px;">
     </div>
     <div class="form-tips">
-        The InitialStateEvent will be send whenever this node is (re-)initialised, but also whenever the controller reconnects to the OpenHAB server.
+        An 'InitialStateEvent'-typed message (when selected below) will be send whenever this node is (re-)initialised, but also whenever the controller reconnects to the OpenHAB server.
     </div>
     <div class="form-row">
         <label for="node-input-initialstate"><i class="fa fa-crosshairs"></i> Send initial<br/>(<code>InitialStateEvent</code>)</label>
